[gd_scene load_steps=5 format=2]

[ext_resource path="res://Characters/Enemies/turret.gd" type="Script" id=1]
[ext_resource path="res://Characters/Player/godot.png" type="Texture" id=2]
[ext_resource path="res://Characters/Enemies/enemy_stats.tscn" type="PackedScene" id=3]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31, 31 )

[node name="turret" type="KinematicBody2D" groups=[
"turrets",
]]
z_index = 1
z_as_relative = false
collision_layer = 6
collision_mask = 21
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 2 )

[node name="enemy_stats" parent="." instance=ExtResource( 3 )]
bullet_damage = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="muzzle_pos" type="Position2D" parent="."]

[node name="shoot_cooldown" type="Timer" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="timeout" from="shoot_cooldown" to="." method="_on_shoot_cooldown_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
